# OtusCppProfCourse

./: .directory  .gitignore  pu.sh
.github/workflows/: hw01.yml  hw01_hello_world.yml  hw01_helloworld.yml  hw01_ip_filter.yml  hw02_allocators.yml  hw03_ipprint.yml___  hw03_print_ip.yml  hw04_gveditor.yml  hw04_gveditor.yml___disabled  hw04_mvc_gveditor.yml  hw05_matrix.yml_back  hw06_bulk.yml  hw08_async.yml  hw09_bulk_server.yml  hw10_join_server.yml  orm.yml  release.yml
allocators/: CMakeLists.txt  customcontainer.h  factorial.h  lalloc10.h  main.cpp  test_customcontainer.cpp  test_factorial.cpp  test_lalloc10.cpp
allocators/include/: customcontainer.h  lalloc10.h
allocators/test/: test_customcontainer.cpp  test_factorial.cpp  test_lalloc10.cpp  test_version.cpp
async/: CMakeLists.txt
async/lib/libasync/include/: async.h  asynccontext.h  asyncpool.h
async/lib/libasync/src/: async.cpp  asynclogger.cpp  asyncpool.cpp
async/lib/libasync/test/: test_bulk.cpp
async/src/: main.cpp
bulk/: CMakeLists.txt  bulk.h  main.cpp  test_bulk.cpp
bulk_server/: CMakeLists.txt
bulk_server/lib/bulkserver/include/: bulkconnection.h  bulkserver.h
bulk_server/lib/bulkserver/src/: bulkconnection.cpp  bulkserver.cpp
bulk_server/lib/bulkserver/test/: test_bulkserver.cpp  test_picture.cpp
bulk_server/lib/libasync/include/: async.h  asynclogger.h  asyncpool.h  asyncqueue.h  bulk.h
bulk_server/lib/libasync/src/: async.cpp
bulk_server/lib/libasync/test/: test_bulk.cpp
bulk_server/src/: main.cpp
docs/: CMakeLists_8txt.html  Doxyfile.in  annotated.html  bulk_8h.html  bulk_8h__dep__incl.map  bulk_8h__dep__incl.md5  bulk_8h__incl.map  bulk_8h__incl.md5  bulk_8h_source.html  canvasapp_8cpp.html  canvasapp_8cpp__incl.map  canvasapp_8cpp__incl.md5  canvasapp_8h.html  canvasapp_8h__dep__incl.map  canvasapp_8h__dep__incl.md5  canvasapp_8h__incl.map  canvasapp_8h__incl.md5  canvasapp_8h_source.html  canvasapp__state__changed_8cpp.html  canvasapp__state__changed_8cpp__incl.map  canvasapp__state__changed_8cpp__incl.md5  canvasapp__state__saved_8cpp.html  canvasapp__state__saved_8cpp__incl.map  canvasapp__state__saved_8cpp__incl.md5  classCanvasApp-members.html  classCanvasApp.html  classCanvasAppState-members.html  classCanvasAppState.html  classCanvasAppState__coll__graph.map  classCanvasAppState__coll__graph.md5  classCanvasAppState__inherit__graph.map  classCanvasAppState__inherit__graph.md5  classGuiButton-members.html  classGuiButton.html  classGuiButton__coll__graph.map  classGuiButton__coll__graph.md5  classGuiButton__inherit__graph.map  classGuiButton__inherit__graph.md5  classGuiCanvas-members.html  classGuiCanvas.html  (+301 more)
docs/html/: dir_70d80a591591af432ae136fd82237625.html  files.html  globals.html  globals_func.html  main_8cpp__incl.map  main_8cpp__incl.md5  print__ip_8h__dep__incl.map  print__ip_8h__incl.map  print__ip_8h__incl.md5  test__print__ip_8cpp.html  test__print__ip_8cpp__incl.map  test__version_8cpp__incl.map  version__lib_8h__dep__incl.md5  version__lib_8h_source.html
docs/html/search/: all_1.js  all_3.js  all_6.js  defines_0.js  files_0.js  files_3.js  files_4.js  functions_0.js  functions_6.js  functions_7.js  functions_8.js
docs/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  defines_0.js  defines_1.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  (+14 more)
gveditor/: CMakeLists.txt  canvas.h  main.cpp  rectangle.h  round.h  shape.cpp  shape.h  shaperesizer.h  shapes.h  shapevisitor.cpp  shapevisitor.h  square.h  triangle.h  version_lib.cpp
gveditor/lib/canvasapp/include/: canvasapp.h
gveditor/lib/canvasapp/src/: canvasapp.cpp  canvasapp_state_changed.cpp  canvasapp_state_saved.cpp
gveditor/lib/gui/include/: guibutton.h  guicanvas.h  guicomponent.h  guimousearea.h
gveditor/lib/gui/src/: guibutton.cpp  guicanvas.cpp  guicomponent.cpp  guimousearea.cpp
gveditor/lib/gui/test/: test_gui.cpp
gveditor/lib/picture/include/: picture.h
gveditor/lib/picture/test/: test_picture.cpp
gveditor/lib/shape/include/: rectangle.h  round.h  shape.h  shapeserializer.h  square.h  triangle.h
gveditor/lib/shape/src/: shapeserializer.cpp
gveditor/lib/shape/test/: test_shape.cpp
gveditor/lib/version/include/: async.h  asynccontext.h
gveditor/lib/version/test/: test_bulk.cpp
gveditor/src/: main.cpp
hello_world/: .directory  CMakeCache.txt  CMakeLists.txt
hello_world/.github/workflows/: example.yml  release.yml
helloworld/: CMakeLists.txt
ip_filter/: CMakeLists.txt  ip_filter.cpp  ip_pool_filter.h  ip_pool_parse.h  ip_pool_show.h  ip_pool_sort.h  main.cpp  test_ip_pool_filter.cpp  test_ip_pool_parse.cpp  test_ip_pool_sort.cpp  test_version.cpp  version_lib.cpp
ipprint/: CMakeLists.txt  main.cpp
join_server/: CMakeLists.txt
join_server/src/: main.cpp
libasync/: CMakeLists.txt
libasync/lib/libasync/src/: async.cpp  (+2 more)
libasync/src/: main.cpp
libasync_shr_test/: CMakeLists.txt  main.cpp
matrix/: CMakeLists.txt  main.cpp  matrix.h  matrix2.h  test_matrix.cpp
orm/: CMakeLists.txt
orm/lib/eorm/include/: eorm.h  eorm_defvalue.hpp  eorm_exception.hpp  eorm_sqlexpr.hpp  eorm_sqlname.hpp  eorm_sqlstrdata.hpp  eorm_strutils.hpp  eorm_table.hpp  eorm_tablecolumn.hpp  eorm_tablecolumnspecs.hpp  eorm_tablecolumntype.hpp  eorm_tablecomparsionexpr.hpp
orm/lib/eorm/src/: eorm_table.cpp  sqlgen.cpp
orm/lib/eorm/test/: test_eorm.cpp  test_sqlgen.cpp
orm/lib/eorm_sqlite/include/: eorm_sqlite_database.hpp  eorm_sqlite_rows_handler.hpp  eorm_sqlite_table.hpp
orm/lib/eorm_sqlite/src/: eorm_sqlite.cpp
orm/lib/eorm_sqlite/test/: test_eorm_sqlite.cpp
orm/src/: main.cpp
print_ip/: CMakeLists.txt  Doxyfile.in  main.cpp  print_ip.h  test_print_ip.cpp
print_ip/docs/: Doxyfile.in
(+11 files in other folders)
